// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should render colors correctly 1`] = `
Array [
  <div
    className="loader__container"
    style={
      Object {
        "--color": "var(--color-primary)",
        "--size": "30px",
      }
    }
  >
    <div
      className="loader"
    >
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
    </div>
  </div>,
  <div
    className="loader__container"
    style={
      Object {
        "--color": "var(--color-accent-1)",
        "--size": "30px",
      }
    }
  >
    <div
      className="loader"
    >
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
    </div>
  </div>,
  <div
    className="loader__container"
    style={
      Object {
        "--color": "salmon",
        "--size": "30px",
      }
    }
  >
    <div
      className="loader"
    >
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
    </div>
  </div>,
]
`;

exports[`loader should render sizes correctly 1`] = `
Array [
  <div
    className="loader__container"
    style={
      Object {
        "--size": "30px",
      }
    }
  >
    <div
      className="loader"
    >
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
    </div>
  </div>,
  <div
    className="loader__container"
    style={
      Object {
        "--size": "50px",
      }
    }
  >
    <div
      className="loader"
    >
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
      <div
        className="loader__bar"
      />
    </div>
  </div>,
]
`;
